--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ font-weight: 600!important;
 .portfolio-subwrapper{
   border-radius: 40px;
   background: #f8f8f8;
-  width: 400px!important;
+  /* width: 400px!important; */
   padding: 10px;
   min-height: 400px!important;
 }
